k8s/gitops/platform/kube-prometheus-stack/prometheus-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-web
  namespace: monitoring
  labels:
    app: prometheus-web
spec:
  ports:
    - port: 9090
      targetPort: http-web
      name: web
  selector:
    app.kubernetes.io/name: prometheus
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-web
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: internal-ca
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus.czw-sre.internal
      secretName: prometheus-tls
  rules:
    - host: prometheus.czw-sre.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-web
                port:
                  number: 9090
